tests/snapshots/integration__fail__constant_literal_only.rl.snap
---
source: tests/integration.rs
expression: output
---
error: unexpected token
  ┌─ /home/anurag/Projects/plrs/tests/files/fail/constant_literal_only.rl:1:16
  │
1 │ const test = 2 + 2;
  │                ^ expected `EndOfLine`, got `Add`
